# handlebars.c

./: .appveyor.bat  .appveyor.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.sh  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile.am  Makefile.in  README.md  TODO.md  aclocal.m4  bootstrap  ci.nix  config.h.in  configure  configure.ac  default.nix  derivation.nix  flake.nix  handlebars.pc.in  handlebars_utils.c  handlebars_utils.h  shell.nix
.ci/: travis.sh
.github/: alpine.Dockerfile  debian.Dockerfile  fedora.Dockerfile
.github/workflows/: ci.yml  docker.yml  linux.yml  osx.yml
bench/: .editorconfig  Makefile.am  Makefile.in  run.sh
bench/partials/: recursion.handlebars  recursion.mustache
bench/templates/: array-each.expected  array-each.handlebars  array-each.json  complex.expected  complex.handlebars  complex.json  data.expected  data.handlebars  depth-1.expected  depth-1.handlebars  depth-1.json  depth-1.mustache  depth-2.expected  depth-2.handlebars  depth-2.json  depth-2.mustache  object-mustache.json  object.handlebars  object.mustache  partial-recursion.expected  partial-recursion.json  partial.expected  partial.handlebars  partial.json  partial.mustache  paths.expected  paths.json  paths.mustache  variables.expected  variables.json
cmake/: FindCheck.cmake  FindLibCheck.cmake  FindLibYaml.cmake  FindLibcompat.cmake  FindLibjsonc.cmake  FindPthreads.cmake  FindTalloc.cmake  Utils.cmake  config.h.in  handlebars_config.h.in
doc/: Doxyfile.in  Makefile.am  Makefile.in
m4/: ax_check_enable_debug.m4  ax_computed_gotos.m4  ax_gcc_func_attribute.m4  hbs_code_coverage.m4  hbs_computed_gotos.m4  hbs_statement_expressions.m4
nix/: check.nix  ci.nix  derivation.nix
src/: CMakeLists.txt  Makefile.am  Makefile.in  handlebars.c  handlebars.h  handlebars.l  handlebars.lex.c  handlebars.lex.h  handlebars.tab.c  handlebars.tab.h  handlebars.y  handlebars_ast.c  handlebars_ast.h  handlebars_ast_helpers.c  handlebars_ast_helpers.h  handlebars_ast_list.c  handlebars_ast_list.h  handlebars_ast_printer.c  handlebars_ast_printer.h  handlebars_builtins.c  handlebars_builtins.h  handlebars_cache.c  handlebars_cache.h  handlebars_cache_lmdb.c  handlebars_cache_mmap.c  handlebars_cache_private.h  handlebars_cache_simple.c  handlebars_closure.c  handlebars_closure.h  handlebars_compiler.c  handlebars_compiler.h  handlebars_config.h.in  handlebars_context.c  handlebars_context.h  handlebars_data.c  handlebars_data.h  handlebars_delimiters.c  handlebars_delimiters.h  handlebars_helpers.c  handlebars_helpers.h  (+55 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.in  adler32.c  fixture1.hbs  fixture2.hbs  fixture3.hbs  fixtures.c  test_ast.c  test_ast_helpers.c  test_ast_list.c  test_cache.c  test_compiler.c  test_context.c  test_data.c  test_executable.bats  test_json.c  test_main.c  test_map.c  test_opcode_printer.c  test_opcodes.c  test_partial_loader.c  test_random_alloc_fail.c  test_scanners.c  test_spec_handlebars.c  test_spec_handlebars_compiler.c  test_spec_handlebars_parser.c  test_spec_handlebars_tokenizer.c  test_spec_mustache.c  test_stack.c  test_string.c  test_token.c  test_token_list.c  test_token_printer.c  test_utils.c  test_value.c  test_vm.c  test_yaml.c  utils.c  utils.h
